bloody forkJoin doesnt work

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -19,3 +19,13 @@
        align-items: center;
     }
 }
+
+.hvr-rounded-button {
+  cursor: pointer;
+  color: #333333;
+  padding: 5px;
+  background: #fff;
+  border: 1px solid #ccc;
+  border-radius: 100%;
+  display: flex;
+}
