all basic things work

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="hvr-app">
-  <div class="hvr-app__header">
-    <h1>
-      My hovecraft is full of eels.
+  <div class="hvr-layout__header">
+    <h1 class="hvr-layout__header-title">
+      myhovecraftisfullofeels
     </h1>
     <div class="hvr-layout__auth-box">
       <span
@@ -25,15 +25,6 @@
       </div>
     </div>
   </div>
-  <mat-form-field>
-    <input matInput type="text" placeholder="csicskajenő">
-    <mat-chip-list #chipList>
-      <mat-chip>béla</mat-chip>
-    </mat-chip-list>
-  </mat-form-field>
-  <mat-icon>cancel</mat-icon>
-  <mat-checkbox>jenő</mat-checkbox>
-  <br>
   <hvr-imagelist></hvr-imagelist>
 </div>
 
