--- a/src/app/components/imagelist-item/imagelist-item.component.less
+++ b/src/app/components/imagelist-item/imagelist-item.component.less
@@ -2,7 +2,7 @@
 
 .hvr-imagelist-item {
   position: relative;
-  margin-bottom: 5px;
+  margin-bottom: 20px;
   border-radius: 8px;
   overflow: hidden;
   min-height: 120px;
@@ -15,5 +15,15 @@
     position: absolute;
     top: 0;
     right: 0;
+  }
+  &__static-tags {
+    padding: 5px;
+  }
+  &__static-tag-item {
+    margin-right: 5px;
+  }
+  &__dynamic-tags {
+    padding: 2px;
+    width: 100%;
   }
 }
