--- a/src/app/components/imagelist/imagelist.component.html
+++ b/src/app/components/imagelist/imagelist.component.html
@@ -1,9 +1,13 @@
 <div class="hvr-imagelist">
   <div class="hvr-imagelist__header">
     <hvr-file-selector
+        class="hvr-imagelist__add-new-button"
         (fileSelected$)="fileSelected($event)"
         *ngIf="authService.user$ | async"
     ></hvr-file-selector>
+    <hvr-imagelist-header
+        [avalaibleTags]="availableTags"
+    ></hvr-imagelist-header>
   </div>
   <div class="hvr-imagelist__items">
     <div
@@ -14,7 +18,11 @@
       <hvr-imagelist-item
               *ngFor="let image of col"
               [image]="image"
+              [avalaibleTags]="availableTags"
               (remove$)="removeImage(image)"
+              (addNewTag$)="addNewTag($event, image)"
+              (addTag$)="addTag($event, image)"
+              (removeTag$)="removeTag($event, image)"
       ></hvr-imagelist-item>
     </div>
   </div>
