ui impr feat impr

--- a/src/app/components/file-selector/file-selector.component.html
+++ b/src/app/components/file-selector/file-selector.component.html
@@ -1,7 +1,7 @@
 <span class="hvr-file-selector">
     <span class="hvr-file-selector__button" (click)=browseFiles()>
         <i class="material-icons" title="ADD_NEW_IMAGE">
-            add_box
+            cloud_upload
         </i>
     </span>
     <input
