--- a/src/app/components/file-selector/file-selector.component.less
+++ b/src/app/components/file-selector/file-selector.component.less
@@ -1,9 +1,9 @@
-
+@import "../../app.component.less";
 .hvr-file-selector {
   &__file-input {
     display: none;
   }
   &__button {
-    cursor: pointer;
+    .hvr-rounded-button;
   }
 }
