--- a/src/app/components/imagelist-item/imagelist-item.component.less
+++ b/src/app/components/imagelist-item/imagelist-item.component.less
@@ -16,6 +16,11 @@
     top: 0;
     right: 0;
   }
+  &__replace {
+    position: absolute;
+    top: 40px;
+    right: 0;
+  }
   &__static-tags {
     padding: 5px;
   }
