--- a/src/app/components/imagelist/imagelist.component.html
+++ b/src/app/components/imagelist/imagelist.component.html
@@ -23,7 +23,9 @@
               (addNewTag$)="addNewTag($event, image)"
               (addTag$)="addTag($event, image)"
               (removeTag$)="removeTag($event, image)"
+              (replace$)="replaceImage($event, image)"
       ></hvr-imagelist-item>
     </div>
   </div>
+  <div class="hvr-imagelist__load-indicator"></div>
 </div>
