--- a/src/app/components/imagelist-item/imagelist-item.component.html
+++ b/src/app/components/imagelist-item/imagelist-item.component.html
@@ -2,6 +2,11 @@
   <span *ngIf="authService.user$ | async" class="hvr-imagelist-item__remove" (click)="removeMe()">
     <i  class="material-icons">delete</i>
   </span>
+  <hvr-file-selector
+          class="hvr-imagelist-item__replace"
+          (fileSelected$)="replaceMe($event)"
+          *ngIf="authService.user$ | async"
+  ></hvr-file-selector>
   <img class="hvr-imagelist-item__image" [src]="image.url" />
   <div class="hvr-imagelist-item__static-tags" *ngIf="!(authService.user$ | async) && image.tags.length">
     <span
