--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="hvr-app">
   <div class="hvr-layout__header">
     <h1 class="hvr-layout__header-title">
-      myhovecraftisfullofeels
+      myhovecraftisfullof<sup class="hvr-layout__header-count">{{count}}</sup>eels
     </h1>
     <div class="hvr-layout__auth-box">
       <span
