--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -40,8 +40,11 @@
   }
   &__header-title {
     color: #efefef;
-    font-size: 6.7vw;
+    font-size: 6.1vw;
     text-transform: uppercase;
+  }
+  &__header-count {
+    color: #fff;
   }
 }
 
@@ -52,6 +55,6 @@
   background: #fff;
   border: 1px solid #ccc;
   border-radius: 100%;
-  display: flex;
+  display: inline-flex;
 }
 
