--- a/src/app/components/imagelist-header/imagelist-header.component.less
+++ b/src/app/components/imagelist-header/imagelist-header.component.less
@@ -1,5 +1,21 @@
+@import "../../app.component.less";
 .hvr-imagelist-header {
+  display: flex;
   &__form {
-    width: 100%;
+    flex-grow: 1;
+  }
+  &__actions {
+  }
+  &__add-tag {
+    .hvr-rounded-button;
+  }
+  &__remove {
+    .hvr-rounded-button;
+  }
+  &__download {
+    .hvr-rounded-button;
+  }
+  &__clear {
+    .hvr-rounded-button;
   }
 }
