--- a/src/app/components/imagelist-header/imagelist-header.component.less
+++ b/src/app/components/imagelist-header/imagelist-header.component.less
@@ -4,6 +4,11 @@
   &__form {
     flex-grow: 1;
   }
+  &__non-tagged-checkbox {
+    margin-right: 10px;
+    display: flex;
+    align-items: center;
+  }
   &__actions {
   }
   &__add-tag {
