--- a/src/app/components/imagelist/imagelist.component.less
+++ b/src/app/components/imagelist/imagelist.component.less
@@ -60,4 +60,17 @@
     position: absolute;
     bottom: 100px;
   }
+
+  &__load-rest {
+    bottom: 10px;
+    width: 100%;
+    position: fixed;
+    text-align: center;
+  }
+  &__load-rest-count {
+    padding: 10px;
+    background: rgba(0, 0, 0, 0.5);
+    color: #fff;
+    border-radius: 6px;
+  }
 }
